tests/errors/parser/wrong-binary-num.expect
---CODE---
1
---STDERR---
Error: tests/errors/parser/wrong-binary-num.futil
4 |    r.in = 10'b22;
  |               ^^ Parse error
Expected binary number
